--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,14 @@ html, body {
     padding: 0;
 }
 
+h1 {
+  width: 100%;
+  text-align: center;
+  font-family: 'Anton', sans-serif;
+  font-family: 'Righteous', cursive;
+  font-size: 3rem;
+}
+
 div {
     border-radius:50%;
     position:absolute;
